@@ -1,0 +1,6 @@
+# Makefile.am -- Test suite for python bindings
+
+TESTS = lib_test.py
+TESTS_ENVIRONMENT = PYTHONPATH=${top_builddir}/bindings/python3/:${top_builddir}/bindings/python3/.libs
+
+dist_check_SCRIPTS = $(TESTS)
