@@ -1,4 +1,7 @@
 0.8.6
+- Fix python path when invoking py-compile (Jan Palus)
+- Drop python2 bindings (Rudi Heitbaum)
+- Optimize capability name translation lookups
 
 0.8.5
 - Remove python global exception handler since it's deprecated
